<resources>
    <string name="app_name">Simple_Calculator2</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_0">0</string>
    <string name="_Dot">.</string>
    <string name="_keyReset">C</string>
    <string name="_keyDivide">/</string>
    <string name="_keyMultiply">x</string>
    <string name="_keySubtract">-</string>
    <string name="_keyAdd">+</string>
    <string name="_keyGetResult">=</string>
    <string name="_keyPersent">&#37;</string>
</resources>